--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  
 */
  
-var API_KEY = "KV5P9yLgth0K05T0hRodpw";
+var API_KEY = "DfUgYEGI3MYFainCIH09Ag";
  
 //----------------------------------------------------------------------
 // Initialization
